--- a/SNSFFW/css/SNSFFW.css
+++ b/SNSFFW/css/SNSFFW.css
@@ -51,5 +51,6 @@ _________________________________________________________________
 */
 @import "content/Typography.css";
 @import "content/Elements.css";
+@import "content/Components.css";
 
 
